# codespaces-blank

./: README.md  nova
Apex Client/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
Apex Client/src/main/java/com/example/clientutils/: ClientUtilsMod.java
Apex Client/src/main/java/com/example/clientutils/config/: ClientUtilsConfig.java
Apex Client/src/main/java/com/example/clientutils/feature/: BookClipboardUtil.java  BookbanWriterUtil.java  FriendManager.java  HotkeyManager.java  MacroRunner.java  PvpTargetManager.java  WaypointManager.java
Apex Client/src/main/resources/: clientutils.mixins.json  fabric.mod.json
Apex Client/src/main/resources/assets/clientutils/lang/: en_us.json
Echo/: .gitignore  README.md  app.py  requirements.txt
Echo/src/echo/: __init__.py  editor.py  pipelines.py
Nova/: COMPLETION.md  QUICKSTART.md  README.md  TOKEN_BYPASS.md  TUTORIAL.md  USAGE.md  VSCODE_SETUP.md  install.sh  pyproject.toml  run
Nova/.nova/: credits.json
Nova/knowledge/: bash.md  bash_advanced.md  common.md  minecraft.md  minecraft_advanced.md  python.md  python_advanced.md
Nova/nova_ai/: __init__.py  agent.py  cli.py  config.py  credits.py  knowledge.py  model_client.py  profiles.py  tools.py  web_gui.py
Nova/nova_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Nova/vscode-nova/: LICENSE  README.md  extension.js  nova-side-panel-0.1.0.vsix  package-lock.json  package.json
NovaProjects/test-project/: README.md  main.py
(+6 files in other folders)
