[project]
name = "nova-ai"
version = "0.1.0"
description = "Local-first coding assistant scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
nova = "nova_ai.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_ai*"]
